# not-goldfish

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  install.sh
.github/workflows/: ci.yml
adapters/claude-code/: README.md
crates/ng-adapters/: Cargo.toml
crates/ng-adapters/src/: dispatch.rs  hooks.rs  lib.rs  mcp.rs  personas.rs  saver_cli.rs  saver_mcp.rs  savers.rs  watcher.rs
crates/ng-bench/: Cargo.toml
crates/ng-bench/src/: corpus.rs  harness.rs  lib.rs  main.rs
crates/ng-bench/tests/: latency_floor.rs  quality_floors.rs
crates/ng-cli/: Cargo.toml
crates/ng-cli/src/: clear.rs  daemon.rs  dispatch.rs  doctor.rs  gain.rs  i18n.rs  install.rs  main.rs  mcp.rs  memory.rs  saver.rs  search.rs  status.rs  sync.rs  sync_context.rs  ui.rs  ui_cmd.rs  uninstall.rs  util.rs  wisdom.rs
crates/ng-cli/tests/: i18n_e2e.rs
crates/ng-core/: Cargo.toml
crates/ng-core/benches/: README.md  graph_bench.rs  lex_embed_bench.rs  search_bench.rs
crates/ng-core/benches/common/: mod.rs
crates/ng-core/src/: embed.rs  embed_model2vec.rs  event.rs  gain.rs  graph.rs  lex.rs  lib.rs  paths.rs  saver.rs  timeutil.rs
crates/ng-core/src/store/: assist.rs  embeddings.rs  gain.rs  graph.rs  memories.rs  mod.rs  saver.rs  search.rs  stats.rs  tests.rs  util.rs
crates/ng-core/tests/: graph_poison_regression.rs  relevance.rs
crates/ng-hook/: Cargo.toml
crates/ng-hook/benches/: inject_bench.rs
crates/ng-hook/src/: inject.rs  lib.rs  main.rs  precompact.rs
crates/ng-hook/tests/: precompact.rs
crates/ng-sessions/: Cargo.toml
crates/ng-sessions/src/: claude.rs  codex.rs  gemini.rs  hygiene.rs  kimi.rs  lib.rs  model.rs  opencode.rs  rewrite.rs
crates/ng-sessions/tests/: parse.rs  real_sessions.rs
crates/ng-sessions/tests/fixtures/: claude.jsonl  codex.jsonl  gemini.json  kimi.jsonl
crates/ng-sessions/tests/fixtures/opencode/storage/message/ses_1/: msg_001.json  msg_002.json  msg_004.json
crates/ng-sessions/tests/fixtures/opencode/storage/session/my-workspace/: ses_1.json
crates/ng-sessions/tests/fixtures/real/: claude-security-review.jsonl
crates/ngd/: Cargo.toml
crates/ngd/src/: assist.rs  enrich.rs  lib.rs  main.rs  security.rs  socket.rs  stub.rs  ui.html  ui.rs  writer.rs
crates/ngd/tests/: concurrency.rs  http_integration.rs
docs/: SETUP.md
docs/benchmarks/: charts.html  stress-test.md  with-vs-without.md
scripts/: README.md  e2e.sh
