[package]
name = "ng-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ng-core.workspace = true
ng-sessions = { path = "../ng-sessions" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
